solo calcula lo del dia de hoy muestra foto

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -24,6 +24,7 @@
                         <div class="card-body">
                             <p id="nomProducto">Precio:{{minItem.Precio}}</p>
                             <a href="{{minItem.URL}}" id="urlProducto">Link del producto</a>
+                            <img src="{{minItem.Img}}">
                         </div> 
                     </div>
                     <div class="card col-md-6">
@@ -34,6 +35,7 @@
                         <div class="card-body">
                             <p id="nomProducto">Precio:{{maxItem.Precio}}</p>
                             <a href="{{maxItem.URL}}" id="urlProducto">Link del producto</a>
+                            <img src="{{maxItem.Img}}">
                         </div> 
                     </div>
                 </div>
