--- a/templates/index2.html
+++ b/templates/index2.html
@@ -40,6 +40,7 @@
                     </div>
                 </div>
         </div>
+    <img src="/plot.png/{{product_name}}" alt="my plot" style="center">
     </div>
 
 </body>
