--- a/templates/index2.html
+++ b/templates/index2.html
@@ -24,7 +24,7 @@
                         <div class="card-body">
                             <p id="nomProducto">Precio:{{minItem.Precio}}</p>
                             <a href="{{minItem.URL}}" id="urlProducto">Link del producto</a>
-                            <img src="{{minItem.Img}}">
+                            <img src="{{minItem.Img}}"  width="300" height="300">
                         </div> 
                     </div>
                     <div class="card col-md-6">
@@ -35,12 +35,20 @@
                         <div class="card-body">
                             <p id="nomProducto">Precio:{{maxItem.Precio}}</p>
                             <a href="{{maxItem.URL}}" id="urlProducto">Link del producto</a>
-                            <img src="{{maxItem.Img}}">
+                            <img src="{{maxItem.Img}}" width="300" height="300">
                         </div> 
                     </div>
                 </div>
         </div>
-    <img src="/plot.png/{{product_name}}" alt="my plot" style="center">
+    <div class="container">
+        <div class="row">
+                    <div class="card col-md-6">
+    <img src="/plot.png/{{product_name}}" alt="my plot" class="center">
+                    </div>
+                    <div class="card col-md-6">
+
+                    </div>
+                </div>
     </div>
 
 </body>
