link en nueva página

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="card-body">
                             <p id="nomProducto">Precio:{{minItem.Precio}}</p>
-                            <a href="{{minItem.URL}}" id="urlProducto">Link del producto</a>
+                            <a href="{{minItem.URL}}" id="urlProducto" target="_blank">Link del producto</a>
                             <img src="{{minItem.Img}}"  width="300" height="300">
                         </div> 
                     </div>
@@ -34,7 +34,7 @@
                         </div>
                         <div class="card-body">
                             <p id="nomProducto">Precio:{{maxItem.Precio}}</p>
-                            <a href="{{maxItem.URL}}" id="urlProducto">Link del producto</a>
+                            <a href="{{maxItem.URL}}" id="urlProducto" target="_blank">Link del producto</a>
                             <img src="{{maxItem.Img}}" width="300" height="300">
                         </div> 
                     </div>
