--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <h1 class="text-center mt-5 mb-5">Calculadora de Precios Sugeridos en Python con Flask y MongoDB</h1>
+        <h1 class="text-center mt-5 mb-5">Calculadora de Precios Sugeridos</h1>
     </div>
 
     <div class="container" id="contenedorProducto">
