refactor todo, drop mongo for mysql

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,25 @@
             </div>
         </div>
     </div>
-    
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Instrucciones:</h5>
+                        <ul>
+                            <li>Ingrese el nombre del producto que desea buscar.</li>
+                            <li>Haga clic en el botón "Buscar" para realizar la búsqueda.</li>
+                            <li>Los resultados se mostrarán en la siguiente página.</li>
+                            <li>Mientras más específico sea con su búsqueda mejores resultados obtendrá</li>
+                            <li>Esta página solo recolecta los datos de la búsqueda, por lo que su utilidad será mayor cuanto más la utilice</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
